# machine-learning-engineering-for-production-public

course1/: pyproject.toml
course1/week1-ungraded-lab/: client.ipynb  pyproject.toml  server.ipynb
course1/week2-ungraded-lab/: C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
course1/week2-ungraded-lab/history-augmented/: history-augmented.csv
course1/week2-ungraded-lab/history-balanced/: history-balanced.csv
course1/week2-ungraded-lab/history-imbalanced/: history-imbalanced.csv
course1/week2-ungraded-lab/model-augmented/: fingerprint.pb  keras_metadata.pb  saved_model.pb
course1/week2-ungraded-lab/model-augmented/variables/: variables.index
course1/week2-ungraded-lab/model-balanced/: fingerprint.pb  keras_metadata.pb  saved_model.pb
course1/week2-ungraded-lab/model-balanced/variables/: variables.index
course1/week2-ungraded-lab/model-imbalanced/: fingerprint.pb  saved_model.pb
course1/week2-ungraded-lab/model-imbalanced/variables/: variables.index
course1/week3-ungraded-lab/: C1W3_Data_Labeling_Ungraded_Lab.ipynb
course2/week1-assignment/: C2W1_Assignment.ipynb
course2/week2-assignment/: C2W2_Assignment.ipynb  traffic_transform.py
course2/week2-assignment/pipeline/: metadata.sqlite
course2/week2-assignment/pipeline/_wheels/: tfx_user_code_Transform-0.0+235a1988905584f3728714609e7e51f8bcbf050945574026b2e54fd43cd7f3ef-py3-none-any.whl
course2/week2-lab1-2-3/: C2_W2_Lab_1_Simple_Feature_Engineering.ipynb  C2_W2_Lab_2_Feature_Engineering_Pipeline.ipynb  C2_W2_Lab_3_Feature_Selection.ipynb
course2/week2-lab1-2-3/pipeline/: metadata.sqlite
(+10 files in other folders)
